docs-archive/apache-airflow-providers-informatica/0.1.0/_sources/_api/airflow/providers/informatica/plugins/listener/index.rst.txt
airflow.providers.informatica.plugins.listener
==============================================

.. py:module:: airflow.providers.informatica.plugins.listener


Classes
-------

.. autoapisummary::

   airflow.providers.informatica.plugins.listener.InformaticaListener


Functions
---------

.. autoapisummary::

   airflow.providers.informatica.plugins.listener.get_informatica_listener


Module Contents
---------------

.. py:class:: InformaticaListener

   Informatica listener sends events on task instance state changes to Informatica EDC for lineage tracking.


   .. py:attribute:: log


   .. py:attribute:: hook


   .. py:method:: on_task_instance_success(previous_state, task_instance, *args, **kwargs)


   .. py:method:: on_task_instance_failed(previous_state, task_instance, *args, **kwargs)


   .. py:method:: on_task_instance_running(previous_state, task_instance, *args, **kwargs)


.. py:function:: get_informatica_listener()

   Get singleton listener manager.


